generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

// -----------------------------------------------
// Enums
// -----------------------------------------------

enum Role {
  sales
  manager
}

enum ReportStatus {
  draft
  submitted
  reviewed
}

// -----------------------------------------------
// Models
// -----------------------------------------------

model User {
  id           Int      @id @default(autoincrement())
  name         String
  email        String   @unique
  passwordHash String   @map("password_hash")
  role         Role
  department   String?
  createdAt    DateTime @default(now()) @map("created_at")
  updatedAt    DateTime @updatedAt @map("updated_at")

  dailyReports DailyReport[]
  comments     Comment[]

  @@map("users")
}

model Customer {
  id          Int      @id @default(autoincrement())
  companyName String   @map("company_name")
  contactName String?  @map("contact_name")
  phone       String?
  email       String?
  address     String?
  notes       String?
  createdAt   DateTime @default(now()) @map("created_at")
  updatedAt   DateTime @updatedAt @map("updated_at")

  visitRecords VisitRecord[]

  @@map("customers")
}

model DailyReport {
  id         Int          @id @default(autoincrement())
  userId     Int          @map("user_id")
  reportDate DateTime     @map("report_date") @db.Date
  problem    String?      @db.Text
  plan       String?      @db.Text
  status     ReportStatus @default(draft)
  createdAt  DateTime     @default(now()) @map("created_at")
  updatedAt  DateTime     @updatedAt @map("updated_at")

  user         User          @relation(fields: [userId], references: [id])
  visitRecords VisitRecord[]
  comments     Comment[]

  // 同一ユーザー・同一日付の日報は1件のみ
  @@unique([userId, reportDate])
  @@map("daily_reports")
}

model VisitRecord {
  id           Int      @id @default(autoincrement())
  reportId     Int      @map("report_id")
  customerId   Int      @map("customer_id")
  visitContent String   @map("visit_content") @db.Text
  sortOrder    Int      @map("sort_order")
  createdAt    DateTime @default(now()) @map("created_at")
  updatedAt    DateTime @updatedAt @map("updated_at")

  report   DailyReport @relation(fields: [reportId], references: [id], onDelete: Cascade)
  customer Customer    @relation(fields: [customerId], references: [id])

  @@index([reportId])
  @@map("visit_records")
}

model Comment {
  id          Int      @id @default(autoincrement())
  reportId    Int      @map("report_id")
  userId      Int      @map("user_id")
  commentText String   @map("comment_text") @db.Text
  createdAt   DateTime @default(now()) @map("created_at")
  updatedAt   DateTime @updatedAt @map("updated_at")

  report DailyReport @relation(fields: [reportId], references: [id], onDelete: Cascade)
  user   User        @relation(fields: [userId], references: [id])

  @@index([reportId])
  @@map("comments")
}
